# intradel-my-container

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
src/: script.py
src/intradel_my_container/: Municipality.py  __init__.py  __main__.py  const.py  functions.py
tests/: page.content.html  test_classes.py  test_functions.py  test_global.py
